--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,10 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.2</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
         </dependency>
-        <!-- JUnit is needed to compile the support classes for the workflow service -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
