--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,4 @@
 buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
     dependencies {
         classpath "gradle.plugin.org.jruyi.gradle:thrift-gradle-plugin:0.4.0"
     }
@@ -11,6 +6,13 @@ buildscript {
 
 plugins {
     id "com.github.hierynomus.license" version "0.14.0"
+}
+
+repositories {
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
+    mavenCentral()
 }
 
 apply plugin: 'java'
