--- a/build.gradle
+++ b/build.gradle
@@ -30,19 +30,17 @@ targetCompatibility = 1.8
 
 dependencies {
     compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.7.6'
-    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
-    compile(group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3') {
-        exclude(module: 'commons-logging')
-    }
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile(group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
 license {
     header rootProject.file('license-header.txt')
     mapping {
-        java='SLASHSTAR_STYLE'
+        java = 'SLASHSTAR_STYLE'
     }
     include 'src/**/*.java'
     strictCheck true
