--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 }
 
 plugins {
-    id "com.github.hierynomus.license" version "0.14.0"
+    id 'net.minecrell.licenser' version '0.3'
 }
 
 repositories {
@@ -39,17 +39,19 @@ dependencies {
 
 license {
     header rootProject.file('license-header.txt')
-    mapping {
-        java = 'SLASHSTAR_STYLE'
-    }
-    include 'src/**/*.java'
-    strictCheck true
+    exclude 'com/uber/cadence/*.java' // generated code
 }
 
 compileJava {
     options.encoding = 'UTF-8'
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
 }
+
+license {
+    header = project.file('license-header.txt')
+    exclude '**/com/uber/cadence/*.java'
+}
+
 
 compileTestJava {
     options.encoding = 'UTF-8'
