Added WorkflowClient.execute (#122)
* Added Retryer.retryAsync

* Introduced IWorkflowService and added getResultAsync

* Added WorkflowClient.execute which returns CompletableFuture with workflow result.

* Added WorkflowClient.execute and its unit test

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ license {
 }
 
 compileJava {
+    dependsOn 'googleJavaFormat'
     options.encoding = 'UTF-8'
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-XepExcludedPaths:" +
             ".*/generated-sources/.*"
@@ -61,7 +62,6 @@ license {
     header = project.file('license-header.txt')
     exclude '**/com/uber/cadence/*.java'
 }
-
 
 compileTestJava {
     options.encoding = 'UTF-8'
