--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ googleJavaFormat {
 }
 
 group = 'com.uber.cadence'
-version = '0.2.0-SNAPSHOT'
+version = '0.2.1'
 
 description = """Uber Cadence Java Client"""
 
