--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.uber.m3', name: 'tally-core', version: '0.2.3'
     compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+    compile group: 'com.cronutils', name: 'cron-utils', version: '8.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
