Multiple fixes to get build and unit-tests passing when building cadence-java-client from Windows. (#291)
* WorflowServiceTChannel: fix failure to establish connection with cadence-server due to null user-name in thrift headers. On Windows user-name is provided by USERNAME environment variable instead of USER on Unix.

    com.uber.cadence.workflow.WorkflowTest > initializationError FAILED
    java.lang.ExceptionInInitializerError

        Caused by:
        java.lang.NullPointerException: null value in entry: user-name=null
            at com.google.common.collect.CollectPreconditions.checkEntryNotNull(CollectPreconditions.java:32)
            at com.google.common.collect.ImmutableMap.entryOf(ImmutableMap.java:176)
            at com.google.common.collect.ImmutableMap$Builder.put(ImmutableMap.java:285)
            at com.uber.cadence.serviceclient.WorkflowServiceTChannel.getThriftHeaders(WorkflowServiceTChannel.java:425)
            at com.uber.cadence.serviceclient.WorkflowServiceTChannel.<init>(WorkflowServiceTChannel.java:377)
            at com.uber.cadence.serviceclient.WorkflowServiceTChannel.<init>(WorkflowServiceTChannel.java:344)
            at com.uber.cadence.workflow.WorkflowTest.<clinit>(WorkflowTest.java:181)

* CustomThrowableTypeAdapter : fix wrong deserialization of throwable stacktrace generated from windows hosts. Windows end of line "\r\n" not properly detected.

com.uber.cadence.converter.DataConverterException: when parsing:"{"detailMessage":"application exception","cause":{"detailMessage":"Failure serializing exception: com.uber.cadence.converter.JsonDataConverterTest$NonSerializableException: java.lang.RuntimeException: root exception","cause":{"detailMessage":null,"cause":" into following types: [class java.lang.RuntimeException]

	at com.uber.cadence.converter.JsonDataConverter.fromData(JsonDataConverter.java:112)
	at com.uber.cadence.converter.JsonDataConverterTest.testException(JsonDataConverterTest.java:255)
	at sun

--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,10 @@ if (JavaVersion.current().isJava8Compatible()) {
     }
 }
 
+javadoc {
+    options.encoding = 'UTF-8'
+}
+
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
     from javadoc
