Implement local activities (#273)
This PR adds local activities support in Java client.

--- a/build.gradle
+++ b/build.gradle
@@ -189,6 +189,7 @@ task registerDomain(type:JavaExec) {
 
 test {
     dependsOn 'registerDomain'
+    dependsOn 'checkLicenseMain'
     testLogging {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
