--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
           - statsd
 
   cadence:
-    image: ubercadence/server:0.5.9
+    image: ubercadence/server:master-auto-setup
     ports:
       - "7933:7933"
       - "7934:7934"
