Feature/gradle 4 2 to 6 0 openjdk 8 alpine docker base image (#426)
* Upgrade gradle wrapper from 4.2 to 6.0 (#417)

To improve compilation time and fix numerous amount of issues alongside
other improvements that have been done throughout Gradle 5.0 and 6.0

* Update Gradle wrapper jar and properties (#417)
In order to work with the newest Gradle version, the Wrapper jar and
properties also have to be updated, so that Gradle knows how to download
it's executable
Gradle automatically downloads the Gradle executable through the
properties

* Introduce OpenJDK Alpine Docker base image (#417)
In order to have the smallest image possible, the Alpine image has to
be used. This will increase performance and will use less disk space
and network ingress.
This base image will reduce the final image size from 713MB down to
377MB, this all by using as minimum libraries as needed; for example by
removing the linux-gnu library.

* Update multiple Gradle dependencies+plugins (#417)
In order to keep up with the latest technology, benefit from the
fastest features and to improve security due to fixed issues and
bugs, there has to be a regular update for dependency and plugins.
Update multiple Gradle dependencies and plugins:
Plugins:
- thrift-gradle-plugin (0.4.0 -> 0.4.1)
- net.minecrell.licenser (0.3 -> 0.4.1)
- com.github.sherter.google-java-format (0.6 -> 0.8)
- net.ltgt.errorprone (0.6 -> 1.1.1)
- java -> java-library

Compile Dependencies:
com.google.errorprone:error_prone_core (2.3.1 -> 2.3.3)
com.uber.m3 (0.2.3 -> 0.4.0)
com.google.guava (27.0.1-jre -> 28.1-jre)

* Updated GSON dependency to 2.8.6 (uber#417)
In order to keep up with the latest technology, benefit from the
fastest features and to improve security due to fixed issues and
bugs, there has to be a regular update for dependency and plugins.
GSON 2.8.6 deprecates certain methods which will prevent usage of
these methods in the future.
https://github.com/google/gson/blob/ma

--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -1,17 +1,23 @@
-FROM openjdk:8
+FROM openjdk:8-alpine
 
+# Apache Thrift version
 ENV APACHE_THRIFT_VERSION=0.9.3
 
-RUN apt-get update && apt-get -y install build-essential && apt-get install -y wget
+# Install dependencies using apk
+RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc
 
+# Compile source
 RUN set -ex ;\
 	wget http://www-us.apache.org/dist/thrift/${APACHE_THRIFT_VERSION}/thrift-${APACHE_THRIFT_VERSION}.tar.gz ;\
 	tar -xvf thrift-${APACHE_THRIFT_VERSION}.tar.gz ;\
 	rm thrift-${APACHE_THRIFT_VERSION}.tar.gz ;\
 	cd thrift-${APACHE_THRIFT_VERSION}/ ;\
-	./configure --without-python --without-cpp ;\
+	./configure --enable-libs=no --enable-tests=no --enable-tutorial=no --with-cpp=no --with-c_glib=no --with-java=yes --with-ruby=no --with-erlang=no --with-go=no --with-nodejs=no --with-python=no ;\
 	make -j2 && make install ;\
 	cd .. && rm -rf thrift-${APACHE_THRIFT_VERSION}
+
+# Cleanup packages and remove cache
+RUN apk del build-dependencies wget && rm -rf /var/cache/apk/*
 
 RUN mkdir /cadence-java-client
 WORKDIR /cadence-java-client
