--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_install:
   - wget https://www-us.apache.org/dist/thrift/0.9.3/thrift-0.9.3.tar.gz
   - tar xfz thrift-0.9.3.tar.gz
   - cd thrift-0.9.3
-  - ./configure --enable-libs=no --enable-tests=no --enable-tutorial=no --with-cpp=no --with-c_glib=no --with-java=yes --with-ruby=no --with-erlang=no --with-go=no --with-nodejs=no
+  - ./configure --enable-libs=no --enable-tests=no --enable-tutorial=no --with-cpp=no --with-c_glib=no --with-java=yes --with-ruby=no --with-erlang=no --with-go=no --with-nodejs=no --with-python=no
   - make -j2 && sudo make install
   - popd
