--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
 buildscript {
     dependencies {
-        classpath "gradle.plugin.org.jruyi.gradle:thrift-gradle-plugin:0.4.0"
+        classpath 'gradle.plugin.org.jruyi.gradle:thrift-gradle-plugin:0.4.1'
     }
 }
 
 plugins {
-    id 'net.minecrell.licenser' version '0.3'
-    id "com.github.sherter.google-java-format" version "0.6"
-    id "net.ltgt.errorprone" version "0.6"
+    id 'net.minecrell.licenser' version '0.4.1'
+    id 'com.github.sherter.google-java-format' version '0.8'
+    id 'net.ltgt.errorprone' version  '1.1.1'
+    id 'java-library'
 }
 
 repositories {
     maven {
-        url "https://plugins.gradle.org/m2/"
+        url 'https://plugins.gradle.org/m2/'
     }
     mavenCentral()
 }
 
-apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: "org.jruyi.thrift"
+apply plugin: 'org.jruyi.thrift'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
 
-if (hasProperty("signing.keyId")) {
+if (hasProperty('signing.keyId')) {
     apply plugin: 'signing'
     signing {
         sign configurations.archives
@@ -39,21 +39,25 @@ googleJavaFormat {
 group = 'com.uber.cadence'
 version = '2.6.3'
 
-description = """Uber Cadence Java Client"""
+description = '''Uber Cadence Java Client'''
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 dependencies {
-    errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
-    errorprone("com.google.errorprone:error_prone_core:2.3.1")
+    errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
+    errorprone('com.google.errorprone:error_prone_core:2.3.3')
+
     compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.8.5'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'com.uber.m3', name: 'tally-core', version: '0.2.3'
-    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
-    compile group: 'com.cronutils', name: 'cron-utils', version: '8.0.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    compile group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
@@ -67,18 +71,24 @@ license {
 compileJava {
     dependsOn 'googleJavaFormat'
     options.encoding = 'UTF-8'
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
-    options.errorprone.errorproneArgs << "-XepExcludedPaths:.*/generated-sources/.*"
+    options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
+    options.errorprone.excludedPaths = '.*/generated-sources/.*'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
+    options.errorprone.excludedPaths = '.*/generated-sources/.*'
 }
 
 // Generation version.properties for value to be included into the request header
 task createProperties(dependsOn: processResources) {
     doLast {
-        def subdir = new File("$buildDir/resources/main/com/uber/cadence/")
+        def subdir = new File('$buildDir/resources/main/com/uber/cadence/')
         if( !subdir.exists() ) {
             subdir.mkdirs()
         }
-        new File("$buildDir/resources/main/com/uber/cadence/version.properties").withWriter { w ->
+        new File('$buildDir/resources/main/com/uber/cadence/version.properties').withWriter { w ->
             Properties p = new Properties()
             p['cadence-client-version'] = project.version.toString()
             p.store w, null
@@ -88,12 +98,6 @@ task createProperties(dependsOn: processResources) {
 
 classes {
     dependsOn createProperties
-}
-
-compileTestJava {
-    options.encoding = 'UTF-8'
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
-    options.errorprone.errorproneArgs << "-XepExcludedPaths:.*/generated-sources/.*"
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -109,12 +113,10 @@ javadoc {
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
     from javadoc
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -122,47 +124,45 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-def ossrhUsername = hasProperty('ossrhUsername') ? property('ossrhUsername') : ""
-def ossrhPassword = hasProperty('ossrhPassword') ? property('ossrhPassword') : ""
+def ossrhUsername = hasProperty('ossrhUsername') ? property('ossrhUsername') : ''
+def ossrhPassword = hasProperty('ossrhPassword') ? property('ossrhPassword') : ''
 
 publishing {
-// Uncomment the following when we can use maven-publish to sign artifacts
-// https://github.com/gradle/gradle/issues/4943
-
-//    mavenCustom(MavenPublication) {
-//        pom.withXml {
-//            asNode().with {
-//                appendNode('packaging', 'jar')
-//                appendNode('name', 'cadence-client')
-//                appendNode('description', description)
-//                appendNode('url', 'https://github.com/uber-java/cadence-client')
-//                appendNode('scm').with {
-//                    appendNode('url', 'https://github.com/uber-java/cadence-client')
-//                    appendNode('connection', 'git@github.com:uber-java/cadence-client.git')
-//                }
-//                appendNode('licenses').with {
-//                    appendNode('license').with {
-//                        appendNode('name', 'The Apache License, Version 2.0')
-//                        appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
-//                    }
-//                }
-//                appendNode('developers').with {
-//                    appendNode('maxim').with {
-//                        appendNode('id', 'maxim')
-//                        appendNode('name', 'Maxim Fateev')
-//                        appendNode('email', 'maxim@uber.com')
-//                    }
-//                    appendNode('developer').with {
-//                        appendNode('id', 'meiliang')
-//                        appendNode('name', 'Liang Mei')
-//                        appendNode('email', 'meiliang@uber.com')
-//                    }
-//                }
-//            }
-//        }
-//    }
 
     publications {
+        maven(MavenPublication) {
+            pom.withXml {
+                asNode().with {
+                    appendNode('packaging', 'jar')
+                    appendNode('name', 'cadence-client')
+                    appendNode('description', description)
+                    appendNode('url', 'https://github.com/uber-java/cadence-client')
+                    appendNode('scm').with {
+                        appendNode('url', 'https://github.com/uber-java/cadence-client')
+                        appendNode('connection', 'git@github.com:uber-java/cadence-client.git')
+                    }
+                    appendNode('licenses').with {
+                        appendNode('license').with {
+                            appendNode('name', 'The Apache License, Version 2.0')
+                            appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
+                        }
+                    }
+                    appendNode('developers').with {
+                        appendNode('maxim').with {
+                            appendNode('id', 'maxim')
+                            appendNode('name', 'Maxim Fateev')
+                            appendNode('email', 'maxim@uber.com')
+                        }
+                        appendNode('developer').with {
+                            appendNode('id', 'meiliang')
+                            appendNode('name', 'Liang Mei')
+                            appendNode('email', 'meiliang@uber.com')
+                        }
+                    }
+                }
+            }
+        }
+
         mavenJava(MavenPublication) {
             from components.java
             artifact javadocJar
@@ -176,9 +176,9 @@ publishing {
                 password ossrhPassword
             }
             if(project.version.endsWith('-SNAPSHOT')) {
-                url "https://oss.sonatype.org/content/repositories/snapshots/"
+                url 'https://oss.sonatype.org/content/repositories/snapshots/'
             } else {
-                url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
             }
         }
     }
@@ -193,8 +193,8 @@ test {
     dependsOn 'registerDomain'
     dependsOn 'checkLicenseMain'
     testLogging {
-        events "passed", "skipped", "failed"
-        exceptionFormat "full"
+        events 'passed', 'skipped', 'failed'
+        exceptionFormat 'full'
         // Uncomment the following line if you want to see test logs in gradlew run.
         showStandardStreams true
     }
@@ -205,11 +205,11 @@ uploadArchives {
         mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+            repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
                 authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+            snapshotRepository(url: 'https://oss.sonatype.org/content/repositories/snapshots/') {
                 authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
