--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 plugins {
     id 'net.minecrell.licenser' version '0.4.1'
     id 'com.github.sherter.google-java-format' version '0.8'
-    id 'net.ltgt.errorprone' version  '1.1.1'
+    id 'net.ltgt.errorprone' version '1.1.1'
     id 'java-library'
 }
 
@@ -119,11 +119,13 @@ javadoc {
     options.encoding = 'UTF-8'
 }
 
-task javadocJar(type: Jar) {
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    archiveClassifier = 'javadoc'
     from javadoc
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
