--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - label: ":java: Unit test with test services"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
     plugins:
@@ -11,7 +11,7 @@ steps:
 
   - label: ":java: Unit test with docker services sticky on"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
     plugins:
@@ -21,7 +21,7 @@ steps:
 
   - label: ":java: Unit test with docker services sticky off"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
     plugins:
