--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -26,8 +26,8 @@ services:
         aliases:
           - statsd
 
-  cadence:
-    image: ubercadence/server:master-auto-setup
+  temporal:
+    image: temporalio/temporal:0.0.1.alpha-auto-setup
     logging:
       driver: none
     ports:
@@ -44,7 +44,7 @@ services:
     networks:
       services-network:
         aliases:
-          - cadence
+          - temporal
 
   unit-test-docker-sticky-off:
     build:
@@ -53,13 +53,13 @@ services:
     command: "./gradlew --no-daemon test"
     environment:
       - "USER=unittest"
-      - "CADENCE_SEEDS=cadence"
+      - "TEMPORAL_SEEDS=temporal"
       - "USE_DOCKER_SERVICE=true"
       - "STICKY_OFF=true"
     depends_on:
-      - cadence
+      - temporal
     volumes:
-      - "../../:/cadence-java-client"
+      - "../../:/temporal-java-client"
     networks:
       services-network:
         aliases:
@@ -72,13 +72,13 @@ services:
     command: "./gradlew --no-daemon test"
     environment:
       - "USER=unittest"
-      - "CADENCE_SEEDS=cadence"
+      - "TEMPORAL_SEEDS=temporal"
       - "USE_DOCKER_SERVICE=true"
       - "STICKY_OFF=false"
     depends_on:
-      - cadence
+      - temporal
     volumes:
-      - "../../:/cadence-java-client"
+      - "../../:/temporal-java-client"
     networks:
       services-network:
         aliases:
@@ -93,7 +93,7 @@ services:
       - "USER=unittest"
       - "USE_DOCKER_SERVICE=false"
     volumes:
-      - "../../:/cadence-java-client"
+      - "../../:/temporal-java-client"
     networks:
       services-network:
         aliases:
