--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ license {
 }
 
 compileThrift {
-    sourceItems "src/main/idls/thrift/cadence.thrift","src/main/idls/thrift/shared.thrift"
+    sourceItems "src/main/thrift/temporal.thrift", "src/main/thrift/shared.thrift"
 
     nowarn true
 }
