Automatically update idl submodule on build #435 (#436)
* Add IDLs directory to gitignore #435
To leave the files on one place, the files coming from the submodule
repository should only stay on the submodule repository and not to be
included in the Java client repository.
Because of this, the IDLs folder should be ignored completely.

* Added initDlsSubmodule and updateDlsSubmodule task to gradle #435
In order to keep the master branch of the Dls repo up-to-date with the
Java Client, the building process has to have an updated list of thrift
files.

* Added git to Dockerfile #435
In order to support updating submodules, the Git package has to be added
to the JDK8 Alpine build image.

Co-authored-by: Maxim Fateev <mfateev@users.noreply.github.com>

--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,19 @@ license {
     exclude 'com/uber/cadence/*.java' // generated code
 }
 
+task initDlsSubmodule(type: Exec) {
+    description = 'Initializes src/main/idls submodule'
+    commandLine 'git', 'submodule', 'init'
+}
+
+task updateDlsSubmodule(type: Exec) {
+    dependsOn initDlsSubmodule
+    description = 'Updates src/main/idls submodule'
+    commandLine 'git', 'submodule', 'update'
+}
+
 compileThrift {
+    dependsOn updateDlsSubmodule
     sourceItems "src/main/idls/thrift/cadence.thrift","src/main/idls/thrift/shared.thrift"
 
     nowarn true
