--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -5,6 +5,8 @@ ENV APACHE_THRIFT_VERSION=0.9.3
 
 # Install dependencies using apk
 RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc
+# Git is needed in order to update the dls submodule
+RUN apk add --virtual git
 
 # Compile source
 RUN set -ex ;\
