--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
         classpath 'gradle.plugin.org.jruyi.gradle:thrift-gradle-plugin:0.4.1'
