--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,6 @@ dependencies {
     compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
     compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.8.5'
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
-    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
     implementation 'io.grpc:grpc-netty-shaded:1.26.0'
@@ -81,12 +80,6 @@ license {
     exclude 'io/temporal/*.java' // generated code
 }
 
-compileThrift {
-    sourceItems "src/main/thrift/temporal.thrift", "src/main/thrift/shared.thrift"
-
-    nowarn true
-}
-
 protobuf {
     protoc {
         artifact = "com.google.protobuf:protoc:3.11.0"
@@ -98,7 +91,9 @@ protobuf {
     }
     generateProtoTasks {
         all()*.plugins {
-            grpc {}
+            grpc {
+                outputSubDir = 'java'
+            }
         }
     }
 }
