--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:8-alpine
 ENV APACHE_THRIFT_VERSION=0.9.3
 
 # Install dependencies using apk
-RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc && apk add protobuf && apk add glibc-2.30-r0.apk
+RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc && apk add protoc
 
 # Compile source
 RUN set -ex ;\
