--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -50,7 +50,7 @@ services:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
-    command: "./gradlew --no-daemon test"
+    command: "./gradlew --no-daemon -Palpine=true test"
     environment:
       - "USER=unittest"
       - "TEMPORAL_SEEDS=temporal"
@@ -69,7 +69,7 @@ services:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
-    command: "./gradlew --no-daemon test"
+    command: "./gradlew --no-daemon -Palpine=true test"
     environment:
       - "USER=unittest"
       - "TEMPORAL_SEEDS=temporal"
@@ -88,7 +88,7 @@ services:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
-    command: "./gradlew --no-daemon test"
+    command: "./gradlew --no-daemon -Palpine=true test"
     environment:
       - "USER=unittest"
       - "USE_DOCKER_SERVICE=false"
