--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -1,10 +1,11 @@
-FROM openjdk:8-alpine
+FROM openjdk:8
 
 # Apache Thrift version
 ENV APACHE_THRIFT_VERSION=0.9.3
 
 # Install dependencies using apk
-RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc && apk add protobuf
+RUN apk update && apk add --virtual wget ca-certificates wget && apk add --virtual build-dependencies build-base gcc
+ # && apk add protobuf
 
 # Compile source
 RUN set -ex ;\
