--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
+    annotationProcessor 'com.google.auto.value:auto-value:1.7'
+
+    implementation 'com.google.auto.value:auto-value-annotations:1.7'
     implementation 'io.grpc:grpc-netty-shaded:1.26.0'
     implementation 'io.grpc:grpc-protobuf:1.26.0'
     implementation 'io.grpc:grpc-stub:1.26.0'
