--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
     mavenCentral()
 }
 
+apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
@@ -61,10 +62,13 @@ dependencies {
     compile group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    compile group: 'com.spotify', name: 'futures-extra', version: '4.2.2'
     compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
     compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.8.5'
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'io.grpc', name: 'grpc-testing', version: '1.26.0'
+    compile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
 
     annotationProcessor 'com.google.auto.value:auto-value:1.7'
 
@@ -76,6 +80,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testCompile group: 'io.grpc', name: 'grpc-testing', version: '1.26.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
 }
 
 license {
@@ -85,7 +91,7 @@ license {
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.11.0"
+        artifact = 'com.google.protobuf:protoc:3.11.0'
     }
     plugins {
         grpc {
