--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "src/main/proto"]
 	path = src/main/proto
 	url = git@github.com:temporalio/temporal-proto.git
+[submodule "src/main/idls"]
+	path = src/main/idls
+	url = git@github.com:uber/cadence-idl.git
+	branch = master
